Minor styling updates.

--- a/resources/styles/field.styl
+++ b/resources/styles/field.styl
@@ -7,17 +7,6 @@
     &:last-of-type
         padding-bottom 0
 
-    .label
-        margin-bottom 10px
-
-        label
-            display block
-            font-weight bold
-
-        small
-            font-size 92%
-            color #777
-
     input[type="text"],
     input[type="email"],
     input[type="url"],
@@ -37,6 +26,9 @@
 
     .hide
         display none
+
+    &__label
+        font-weight 600
 
     &__input
         margin-top 6px
