--- a/resources/styles/fields.styl
+++ b/resources/styles/fields.styl
@@ -10,6 +10,7 @@
         background: #FFF;
         border: 1px solid #e5e5e5;
         box-shadow: 0 1px 1px rgba(0,0,0,.04);
+        padding-top: 3px !important;
     }
 
     & > .giant-field {
