--- a/resources/styles/relation.styl
+++ b/resources/styles/relation.styl
@@ -1,1 +1,90 @@
-@import "../components/bower/selectize/dist/css/selectize.css"
+.gnt-meta-relation {
+
+    &__search {
+        opacity: 0.5;
+        transition: opacity 0.18s;
+
+        &:hover,
+        &:focus {
+            opacity: 1;
+        }
+    }
+
+    &__suggestions-container {
+        position: relative;
+        z-index: 1;
+
+        &-inner {
+            position: absolute;
+            left: 1px;
+            top: -1px;
+            box-sizing: border-box;
+            width: 100%;
+            padding 0 8px;
+            background: #F7F7F7;
+            border: 1px solid #e5e5e5;
+            display: none;
+            transition: all 0.18s;
+
+            .is-active & {
+                display: block;
+            }
+        }
+    }
+
+    &__more {
+        padding-bottom: 8px;
+        font-style: italic;
+        opacity: 0.5;
+        display: none;
+    }
+
+    &__empty {
+        padding: 8px 0;
+        font-style: italic;
+        opacity: 0.5;
+        display: none;
+    }
+
+    &__suggestion {
+        cursor: pointer;
+
+        &:hover {
+            color: #00a0d2
+        }
+    }
+
+    &__selections {
+        margin: 0;
+    }
+
+    &__suggestion,
+    &__selection {
+        margin: 8px 0;
+    }
+
+    &__remove {
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        line-height: 17px;
+        background: #fff;
+        border: 2px solid #999;
+        border-radius: 20px;
+        vertical-align: bottom;
+        cursor: pointer;
+        font-family: Dashicons;
+        font-size: 14px;
+        text-align: center;
+        color: #777;
+
+        &:before {
+            content "\f335";
+            font-family Dashicons;
+        }
+
+        &:hover {
+            color #00a0d2;
+        }
+    }
+}
