Improvements in code style.

--- a/resources/styles/fields.styl
+++ b/resources/styles/fields.styl
@@ -2,7 +2,7 @@
  * @name GiantRobot Meta Fields
  * @desc
  */
-@import "nib"
+@import "nib";
 
 .giant-fields {
 
@@ -14,16 +14,16 @@
     }
 
     & > .giant-field {
-        margin 0 -12px
-        padding 12px 12px 15px
-        border-top 1px solid #EEE
+        margin: 0 -12px;
+        padding: 12px 12px 15px;
+        border-top: 1px solid #EEE;
     }
 }
 
-@import "field"
-@import "attachment"
-@import "datetime"
-@import "gallery"
-@import "location"
-@import "relation"
-@import "repeater"
+@import "field";
+@import "attachment";
+@import "datetime";
+@import "gallery";
+@import "location";
+@import "relation";
+@import "repeater";
